# me_chat

./: .env  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: config.rs  main.rs  network.rs  websocket.rs  window_handler.rs
src/api/: mod.rs  network.rs
ui/: login.slint  main.slint  store.slint
ui/component/: borderless-window.slint  chat-box.slint  chat-message-item.slint  chat-message-list.slint  draggable-rectangle.slint  message-info.slint  message-list.slint  message.slint  side_bar.slint
ui/component/base/: borderless-window.slint  draggable-rectangle.slint  side-bar.slint
ui/page/: chat.slint  home.slint
