[package]
name = "me_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.5.0"
anyhow = "1.0.79"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.114"

[build-dependencies]
slint-build = "1.8"
