[package]
name = "me_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.8.0"
anyhow = "1.0"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
futures-util = "0.3"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[build-dependencies]
slint-build = "1.8"
